add acters, validation data
